--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -11,7 +11,7 @@ ru:
       cities: "Города"
       asset_types: "Типы активов"
       paid_conditions: "Условия оплаты"
-      assets: "Актив"
+      assets: "Активы"
     dashboard_welcome:
       welcome: "Добро пожаловать в Active Admin. Это стандартная страница управления сайтом."
       call_to_action: "Чтобы добавить сюда что-нибудь загляните в 'app/admin/dashboard.rb'"
