add admin + model + migrations for image gallery for assets

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,3 +30,4 @@ en:
       asset_types: "Asset types"
       paid_conditions: "Paid conditions"
       assets: "Assets"
+      asset_images: "Asset images"
