add AdminMedia admin pages + migration + model

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,3 +31,4 @@ en:
       paid_conditions: "Paid conditions"
       assets: "Assets"
       asset_images: "Asset images"
+      asset_media: "Asset Media"
