--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -13,6 +13,7 @@ es:
       paid_conditions: "Condiciones de pago"
       assets: "Activo"
       asset_images: "Fotos de activo"
+      asset_media: "Media de activo"
     dashboard_welcome:
       welcome: "Bienvenido a Active Admin. Esta es la página de inicio predeterminada."
       call_to_action: "Para agregar secciones edite 'app/admin/dashboard.rb'"
